we're checking the tailnet locally
